--- a/Challenges/ChallengeOne/index.html
+++ b/Challenges/ChallengeOne/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="hero">
-            <img src="https://www.digitshack.com/codepen/mentor1/illustration-hero.svg" alt="">
+            <img src="images/illustration-hero.svg" alt="">
         </div>
         <div class="text-content">
             <h2 class="title">
@@ -23,7 +23,7 @@
             </p>
             <div class="plan-box">
                 <div class="plan-box-left">
-                    <img src="https://www.digitshack.com/codepen/mentor1/icon-music.svg" alt="">
+                    <img src="images/icon-music.svg" alt="">
                     <div>
                         <h5>Annual Plan</h5>
                         <p>$59.99/year</p>
